catkin_ws/logs/iq_gnc/build.make.244.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:181:53: error: binding reference of type ‘mavros_msgs::GlobalPositionTarget&’ {aka ‘mavros_msgs::GlobalPositionTarget_<std::allocator<void> >&’} to ‘const mavros_msgs::GlobalPositionTarget_<std::allocator<void> >’ discards qualifiers
  181 |   mavros_msgs::GlobalPositionTarget& drone1_gps_g = *msg;
      |                                                     ^~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:247:7: error: ‘drone1_gps_sub’ was not declared in this scope; did you mean ‘drone1_pos_cb’?
  247 |       drone1_gps_sub = gnc_node.subscribe<mavros_msgs::GlobalPositionTarget>("/drone1/mavros/setpoint_position/global", 10, drone1_gpsSub_cb);
      |       ^~~~~~~~~~~~~~
      |       drone1_pos_cb
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
